Finish Get Tree Stats and Unit Test
